<resources>
    <string name="app_name">HealthTracking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Health Tracking</string>
    <string name="nav_header_subtitle">tuandung@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_devices">select patient</string>
    <string name="menu_now">current health checking</string>
    <string name="menu_today">daily health checking</string>
    <string name="menu_week">weekly health checking</string>
    <string name="menu_month">  </string>
    <string name="logout">Logout</string>

    <string name="tab_item_data">Values</string>
    <string name="tab_item_graph">Graphs</string>

    <string name="graph_bottom"> -> go to graph -></string>

    <string name="choose_device">Choose your patient </string>
    <string name="device1">Device 1</string>
    <string name="device2">Device 2</string>
    <string name="device3">Device 3</string>

    <string name="tmstamp">Date</string>
    <string name="temperature">Temp  </string>
    <string name="oxygen">Oxygen</string>
    <string name="heartrate">Heart</string>
    <string name="result">Result</string>

    <!-- Key names for properties stored in shared properties -->
    <string name="security_bucket_name">security.preferences.bucket</string>
    <string name="security_token_value">security.token.value</string>
    <string name="security_token_expiration">security.token.expiration</string>
    <string name="security_device_value">security.device.value</string>
    <string name="security_login_value">security.login.value</string>

    <!-- Variables related to REST API -->
    <string name="api_root_url">http://10.0.2.2:8080/</string>
</resources>