<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".graphicModule.week.WeekFragment">


    <TableLayout
        android:id="@+id/table_week"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="209dp">

        <Button
            android:id="@+id/btn_graph"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:insetBottom="0dp"
            android:text="@string/graph_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />


        <TableRow
            android:layout_marginTop="0dp"
            android:background="@color/design_default_color_secondary">

            <LinearLayout
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/temperature_week"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/temperature"
                android:textAlignment="center"
                android:textSize="17dp"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/oxygen_week"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/oxygen"
                android:textAlignment="center"
                android:textSize="17dp"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/heart_week"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/heartrate"
                android:textAlignment="center"
                app:layout_constraintHorizontal_bias="0.0"
                android:textSize="17dp"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/result_week"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/result"
                android:textAlignment="center"
                android:textSize="17dp"
                app:layout_constraintStart_toStartOf="parent" />

        </TableRow>
    </TableLayout>



</androidx.constraintlayout.widget.ConstraintLayout>